--- a/package.json
+++ b/package.json
@@ -7,22 +7,16 @@
   "scripts": {
     "test": "ava",
     "test-js": " npx ava ./dist/test/*Test.js ./dist/test/**/*Test.js",
-    "coverage": "npx nyc --nycrc-path nyc.config.js npm test",
     "test-watch": "ava -w",
     "test-debug": "node --inspect-brk node_modules/ava/cli.js --serial",
-    "test-performance": "ts-node -T test/performance/allNames1.ts",
     "clean": "rm -rf dist docs",
     "build": "npm run clean && npx tsc",
     "prepare": "npm run build",
     "format": "npx ts-refactor format \"src/**/*.ts*\" \"test/**/*.ts*\" ./formatCodeSettings.json --tsConfigPath ./tsconfig.json --dontAsk",
     "organizeImports": "npx ts-refactor organizeImports \"src/**/*.ts*\" \"test/**/*.ts*\"  ./formatCodeSettings.json --tsConfigPath ./tsconfig.json  --dontAsk ",
     "lint": "npm run organizeImports && npm run format",
-    "docs-readme": "markdown-toc README.md -i && cp README.md ..",
-    "docs-api": "rm -rf docs && typedoc --mode modules --ignoreCompilerErrors --theme markdown --out docs src/index.ts ",
-    "docs": "npm run docs-readme && npm run docs-api",
     "all": "npm run clean && npm run lint && npm run build && npm run test && npm run test-js",
-    "all-publish": "npm run all && git commit -a -m \"version patch\" && npm version patch && npm publish",
-    "all-app": "npm run all && cd typescript-ast-query-editor && npm run all"
+    "all-publish": "npm run all && git commit -a -m \"version patch\" && npm version patch && npm publish"
   },
   "keywords": [
     "typescript",
@@ -33,27 +27,15 @@
   "author": "Sebastián Gurin",
   "license": "MIT",
   "devDependencies": {
-    "@istanbuljs/nyc-config-typescript": "^0.1.3",
-    "@types/micromatch": "^3.1.0",
     "@types/node": "^12.0.4",
     "ava": "^2.0.0",
-    "coveralls": "^3.0.3",
-    "markdown-toc": "^1.2.0",
-    "nyc": "^14.1.1",
     "ts-node": "^8.2.0",
-    "ts-refactor": "0.0.6",
-    "typedoc": "^0.14.2",
-    "typedoc-plugin-markdown": "^1.2.1"
-  },
-  "peerDependencies": {
-    "typescript": "^3.5.1"
+    "typescript": "^3.5.1",
+    "ts-refactor": "0.0.6"
   },
   "dependencies": {
-    "astq": "github:cancerberoSgx/astq",
-    "micromatch": "^4.0.2",
-    "misc-utils-of-mine-generic": "^0.2.8",
-    "string.ify": "^1.0.58",
-    "ts-simple-ast-extra": "0.1.15"
+    "antlr4": "^4.7.2",
+    "misc-utils-of-mine-generic": "^0.2.8"
   },
   "repository": {
     "type": "git",
