--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
   "types": "dist/src/index.d.ts",
   "scripts": {
     "test": "ava",
-    "test-js": " npx ava ./dist/test/*Test.js ./dist/test/**/*Test.js",
+    "test-js": " npx ava ./dist/test/*Test.js",
     "test-watch": "ava -w",
     "test-debug": "node --inspect-brk node_modules/ava/cli.js --serial",
     "clean": "rm -rf dist docs",
-    "build": "npm run clean && npx tsc",
+    "build": "npm run clean && npx tsc && npm run copy",
+    "copy": "rm -rf dist/src/grammar && mkdir -p dist/src/grammar && cp -r src/grammar/* dist/src/grammar",
     "prepare": "npm run build",
     "format": "npx ts-refactor format \"src/**/*.ts*\" \"test/**/*.ts*\" ./formatCodeSettings.json --tsConfigPath ./tsconfig.json --dontAsk",
     "organizeImports": "npx ts-refactor organizeImports \"src/**/*.ts*\" \"test/**/*.ts*\"  ./formatCodeSettings.json --tsConfigPath ./tsconfig.json  --dontAsk ",
