--- a/package.json
+++ b/package.json
@@ -29,14 +29,16 @@
   "license": "MIT",
   "devDependencies": {
     "@types/node": "^12.0.4",
+    "@types/puppeteer": "^1.12.4",
     "ava": "^2.0.0",
+    "parcel": "^1.12.3",
+    "puppeteer": "^1.17.0",
     "ts-node": "^8.2.0",
-    "typescript": "^3.5.1",
-    "ts-refactor": "0.0.6"
+    "ts-refactor": "0.0.6",
+    "typescript": "^3.5.1"
   },
   "dependencies": {
-    "antlr4": "^4.7.2",
-    "misc-utils-of-mine-generic": "^0.2.8"
+    "antlr4": "^4.7.2"
   },
   "repository": {
     "type": "git",
