--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,13 +3,14 @@
     "target": "es5",
     "module": "commonjs",
     "moduleResolution": "node",
-    "lib": ["esnext"], 
+    "lib": ["esnext", "dom"], 
     "strict": true, 
     "esModuleInterop": true,
     "sourceMap": true,
     "outDir": "./dist", 
     "declaration": true,
     "rootDir": ".",
+    "skipLibCheck": true
   },
   "include": [
     "src", "test"
