--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "typescript": "^3.5.1"
   },
   "dependencies": {
-    "antlr4": "^4.7.2"
+    "antlr4": "^4.7.2",
+    "minimist": "^1.2.0"
   },
   "repository": {
     "type": "git",
