--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Generate AST of lots of common programming languages using antlr4. JavaScript API and CLI tool.",
   "main": "dist/src/index.js",
   "types": "dist/src/index.d.ts",
+  "bin": "bin/univac.js",
   "scripts": {
     "test": "ava",
     "test-browser": "npx ava test-browser/*Test.ts",
