--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "organizeImports": "npx ts-refactor organizeImports \"src/**/*.ts*\" \"test/**/*.ts*\"  ./formatCodeSettings.json --tsConfigPath ./tsconfig.json  --dontAsk ",
     "lint": "npm run organizeImports && npm run format",
     "all": "npm run clean && npm run lint && npm run build && npm run test && npm run test-js && npm run test-browser",
+    "all-apps": "npm run all && cd playground && npm run all",
     "all-publish": "npm run all && git commit -a -m \"version patch\" && npm version patch && npm publish"
   },
   "keywords": [
