--- a/playground/package.json
+++ b/playground/package.json
@@ -26,6 +26,7 @@
   "author": "Sebastián Gurin",
   "license": "MIT",
   "devDependencies": {
+    "@types/cytoscape": "^3.4.3",
     "@types/node": "^12.0.4",
     "@types/react": "^16.8.19",
     "@types/react-dom": "^16.8.4",
@@ -37,6 +38,9 @@
     "watch": "^1.0.2"
   },
   "dependencies": {
+    "cytoscape": "^3.7.0",
+    "cytoscape-even-parent": "^1.1.1",
+    "cytoscape-navigator": "^1.3.3",
     "misc-utils-of-mine-generic": "^0.2.7",
     "monaco-editor": "^0.17.0",
     "react": "^16.8.6",
