--- a/render-dot/package.json
+++ b/render-dot/package.json
@@ -1,6 +1,6 @@
 {
   "name": "render-dot",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Render Graphviz .dot files to svg, png, dotx, json, using several graph engines, for browser, node and command line",
   "main": "dist/src/index.js",
   "types": "dist/src/index.d.ts",
@@ -37,7 +37,8 @@
     "dot",
     "dot format",
     "graph",
-    "svg", "render"
+    "svg",
+    "render"
   ],
   "author": {
     "name": "Sebastian Gurin",
