--- a/render-dot/package.json
+++ b/render-dot/package.json
@@ -22,6 +22,7 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@types/glob": "^7.1.1",
     "@types/node": "^12.0.7",
     "ava": "^2.0.0",
     "ts-node": "^8.2.0",
@@ -29,9 +30,11 @@
     "typescript": "^3.5.1"
   },
   "dependencies": {
+    "glob": "^7.1.4",
     "minimist": "^1.2.0",
-    "viz.js": "^2.1.2",
-    "misc-utils-of-mine-generic": "^0.2.8"
+    "misc-utils-of-mine-generic": "^0.2.8",
+    "tiny-worker": "^2.2.0",
+    "viz.js": "^2.1.2"
   },
   "keywords": [
     "Graphviz",
