--- a/svg-png-converter/playground/package.json
+++ b/svg-png-converter/playground/package.json
@@ -26,18 +26,22 @@
   "author": "Sebastián Gurin",
   "license": "MIT",
   "devDependencies": {
+    "@types/file-saver": "^2.0.1",
     "@types/node": "^12.0.4",
+    "@types/p-queue": "^3.2.1",
     "@types/react": "^16.8.19",
     "@types/react-dom": "^16.8.4",
     "@types/react-jsonschema-form": "^1.3.2",
     "babel-polyfill": "^6.26.0",
     "http-server": "^0.11.1",
+    "p-queue": "^6.0.2",
     "parcel": "^1.12.3",
     "ts-refactor": "0.0.6",
     "typescript": "^3.5.1",
     "watch": "^1.0.2"
   },
   "dependencies": {
+    "file-saver": "^2.0.2",
     "file-type": "^11.1.0",
     "misc-utils-of-mine-generic": "^0.2.10",
     "react": "^16.8.6",
