--- a/svg-png-converter/playground/package.json
+++ b/svg-png-converter/playground/package.json
@@ -11,6 +11,7 @@
     "organizeImports": "npx ts-refactor organizeImports \"src/**/*.ts*\" \"test/**/*.ts*\"  ./formatCodeSettings.json --tsConfigPath ./tsconfig.json  --dontAsk ",
     "lint": "npm run organizeImports && npm run format",
     "start": " npx parcel serve  src/index.html -d docs   --no-source-maps",
+    "start-sm": " npx parcel serve  src/index.html -d docs",
     "build-dev-no-maps": "export NODE_ENV=development ; parcel build src/index.html -d docs  --no-minify --no-content-hash  --no-source-maps",
     "build-dev": "export NODE_ENV=development ; parcel build src/index.html -d docs  --no-minify --no-source-maps --no-content-hash",
     "build": "npm run clean && npx tsc && npm run build-only && rm -rf ../../../demos/docs/svg-png-converter/playground/* && rm -rf docs/static && mkdir -p docs/static && cp -r static/*  docs/static && mv docs/* ../../../demos/docs/svg-png-converter/playground/",
