--- a/playground/package.json
+++ b/playground/package.json
@@ -27,6 +27,8 @@
   "license": "MIT",
   "devDependencies": {
     "@types/cytoscape": "^3.4.3",
+    "@types/d3": "^5.7.2",
+    "@types/d3-hierarchy": "^1.1.6",
     "@types/node": "^12.0.4",
     "@types/react": "^16.8.19",
     "@types/react-dom": "^16.8.4",
@@ -41,6 +43,8 @@
     "cytoscape": "^3.7.0",
     "cytoscape-even-parent": "^1.1.1",
     "cytoscape-navigator": "^1.3.3",
+    "d3": "^5.9.2",
+    "d3-hierarchy": "^1.1.8",
     "misc-utils-of-mine-generic": "^0.2.7",
     "monaco-editor": "^0.17.0",
     "react": "^16.8.6",
