--- a/render-dot/package.json
+++ b/render-dot/package.json
@@ -1,7 +1,7 @@
 {
   "name": "render-dot",
-  "version": "0.0.5",
-  "description": "Render Graphviz .dot files to svg, png, dotx, json, using several graph engines, for browser, node and command line",
+  "version": "0.0.6",
+  "description": "Render Graphviz .dot files to svg, png, dotx, json, jpeg, ps, etc using several graph engines, for browser, node and command line",
   "main": "dist/src/index.js",
   "types": "dist/src/index.d.ts",
   "bin": "bin/render-dot.js",
