--- a/playground/package.json
+++ b/playground/package.json
@@ -42,15 +42,16 @@
   "dependencies": {
     "cytoscape": "^3.7.0",
     "cytoscape-even-parent": "^1.1.1",
-    "cytoscape-navigator": "^1.3.3",
     "d3": "^5.9.2",
     "d3-hierarchy": "^1.1.8",
     "misc-utils-of-mine-generic": "^0.2.7",
     "monaco-editor": "^0.17.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "render-dot": "file:../render-dot",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.87.1",
+    "svg-pan-zoom": "^3.6.0",
     "univac": "file:.."
   },
   "repository": {
