--- a/render-dot/package.json
+++ b/render-dot/package.json
@@ -12,8 +12,9 @@
     "test-watch": "ava -w",
     "prepare": "npm run build",
     "test-debug": "node --inspect-brk node_modules/ava/cli.js --serial",
+    "copy": "cp -r node_modules/viz.js/full.render.js dist/src",
     "clean": "rm -rf dist docs test-browser-outdir",
-    "build": "npm run clean && npx tsc",
+    "build": "npm run clean && npx tsc && npm run copy",
     "format": "npx ts-refactor format \"src/**/*.ts*\" \"test/**/*.ts*\" ./formatCodeSettings.json --tsConfigPath ./tsconfig.json --dontAsk",
     "organizeImports": "npx ts-refactor organizeImports \"src/**/*.ts*\" \"test/**/*.ts*\"  ./formatCodeSettings.json --tsConfigPath ./tsconfig.json  --dontAsk ",
     "lint": "npm run organizeImports && npm run format",
