--- a/playground/package.json
+++ b/playground/package.json
@@ -29,6 +29,7 @@
     "@types/cytoscape": "^3.4.3",
     "@types/d3": "^5.7.2",
     "@types/d3-hierarchy": "^1.1.6",
+    "@types/file-saver": "^2.0.1",
     "@types/node": "^12.0.4",
     "@types/react": "^16.8.19",
     "@types/react-dom": "^16.8.4",
@@ -44,6 +45,7 @@
     "cytoscape-even-parent": "^1.1.1",
     "d3": "^5.9.2",
     "d3-hierarchy": "^1.1.8",
+    "file-saver": "^2.0.2",
     "misc-utils-of-mine-generic": "^0.2.7",
     "monaco-editor": "^0.17.0",
     "react": "^16.8.6",
@@ -52,6 +54,7 @@
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.87.1",
     "svg-pan-zoom": "^3.6.0",
+    "svg-png-converter": "file:../svg-png-converter",
     "univac": "file:.."
   },
   "repository": {
