--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "test-debug": "node --inspect-brk node_modules/ava/cli.js --serial",
     "clean": "rm -rf dist docs test-browser-outdir",
     "build": "npm run clean && npx tsc && npm run copy",
-    "copy": "rm -rf dist/src/grammar && mkdir -p dist/src/grammar && cp -r src/grammar/* dist/src/grammar && rm -rf src/tree-sitter-parser && mkdir -p src/tree-sitter-parser && cp -r src/tree-sitter-parser/* dist/src/tree-sitter-parser",
+    "copy": "rm -rf dist/src/grammar && mkdir -p dist/src/grammar && cp -r src/grammar/* dist/src/grammar && rm -rf dist/src/tree-sitter-parser && mkdir -p dist/src/tree-sitter-parser &&   cp -r src/tree-sitter-parser/* node_modules/web-tree-sitter/tree-sitter.wasm dist/src/tree-sitter-parser",
     "prepare": "npm run build",
     "format": "npx ts-refactor format \"src/**/*.ts*\" \"test/**/*.ts*\" ./formatCodeSettings.json --tsConfigPath ./tsconfig.json --dontAsk",
     "organizeImports": "npx ts-refactor organizeImports \"src/**/*.ts*\" \"test/**/*.ts*\"  ./formatCodeSettings.json --tsConfigPath ./tsconfig.json  --dontAsk ",
