--- a/playground/package.json
+++ b/playground/package.json
@@ -10,11 +10,12 @@
     "format": "npx ts-refactor format \"src/**/*.ts*\" \"test/**/*.ts*\" ./formatCodeSettings.json --tsConfigPath ./tsconfig.json --dontAsk",
     "organizeImports": "npx ts-refactor organizeImports \"src/**/*.ts*\" \"test/**/*.ts*\"  ./formatCodeSettings.json --tsConfigPath ./tsconfig.json  --dontAsk ",
     "lint": "npm run organizeImports && npm run format",
-    "start": " npx parcel serve  src/index.html -d docs   --no-source-maps",
+    "copy": "cp node_modules/univac/dist/src/tree-sitter-parser/* docs",
+    "start": "npm run copy &&  npx parcel serve  src/index.html -d docs --no-source-maps ",
     "build-dev-no-maps": "export NODE_ENV=development ; parcel build src/index.html -d docs  --no-minify --no-content-hash  --no-source-maps",
     "build-dev": "export NODE_ENV=development ; parcel build src/index.html -d docs  --no-minify --no-source-maps --no-content-hash",
     "build": "npm run clean && npx tsc && npm run build-only && rm -rf ../../demos/docs/univac/playground/* && mv docs/* ../../demos/docs/univac/playground/",
-    "build-only": "export NODE_ENV=production && sh build-workers.sh && node --max-old-space-size=5000 node_modules/parcel/bin/cli.js build src/index.html -d docs --no-content-hash --detailed-report  --no-source-maps --public-url './'",
+    "build-only": "export NODE_ENV=production && sh build-workers.sh & &npm run copy &&  node --max-old-space-size=5000 node_modules/parcel/bin/cli.js build src/index.html -d docs --no-content-hash --detailed-report  --no-source-maps --public-url './'",
     "all": "npm run clean && npm run lint && npm run build"
   },
   "keywords": [
@@ -33,7 +34,6 @@
     "@types/node": "^12.0.4",
     "@types/react": "^16.8.19",
     "@types/react-dom": "^16.8.4",
-    "babel-polyfill": "^6.26.0",
     "http-server": "^0.11.1",
     "parcel": "^1.12.3",
     "ts-refactor": "0.0.6",
@@ -48,6 +48,7 @@
     "file-saver": "^2.0.2",
     "misc-utils-of-mine-generic": "^0.2.7",
     "monaco-editor": "^0.17.0",
+    "babel-polyfill": "^6.26.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "render-dot": "file:../render-dot",
