--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "test-debug": "node --inspect-brk node_modules/ava/cli.js --serial",
     "clean": "rm -rf dist docs test-browser-outdir",
     "build": "npm run clean && npx tsc && npm run copy",
-    "copy": "rm -rf dist/src/grammar && mkdir -p dist/src/grammar && cp -r src/grammar/* dist/src/grammar && rm -rf dist/src/tree-sitter-parser && mkdir -p dist/src/tree-sitter-parser &&   cp -r src/tree-sitter-parser/* node_modules/web-tree-sitter/tree-sitter.wasm dist/src/tree-sitter-parser",
+    "copy": "rm -rf dist/src/grammar && mkdir -p dist/src/grammar && cp -r src/grammar/* dist/src/grammar && rm -rf dist/static src/static && mkdir -p dist/static src/static &&  cp node_modules/tree-sitter-rust/tree-sitter-rust.wasm node_modules/web-tree-sitter/tree-sitter.wasm node_modules/tree-sitter-javascript/tree-sitter-javascript.wasm dist/static",
     "prepare": "npm run build",
     "format": "npx ts-refactor format \"src/**/*.ts*\" \"test/**/*.ts*\" ./formatCodeSettings.json --tsConfigPath ./tsconfig.json --dontAsk",
     "organizeImports": "npx ts-refactor organizeImports \"src/**/*.ts*\" \"test/**/*.ts*\"  ./formatCodeSettings.json --tsConfigPath ./tsconfig.json  --dontAsk ",
@@ -29,6 +29,7 @@
     "@types/node": "^12.0.7",
     "@types/puppeteer": "^1.12.4",
     "ava": "^2.0.0",
+    "http-server": "^0.11.1",
     "parcel": "^1.12.3",
     "puppeteer": "^1.17.0",
     "tree-sitter-cli": "^0.15.3",
