--- a/univac/package.json
+++ b/univac/package.json
@@ -9,6 +9,7 @@
     "test": "npm run build && ava",
     "test-browser": "npx ava test-browser/*Test.ts",
     "test-slow": "npx ava test/slowTests/*Test.ts",
+    "coverage": "npx nyc --nycrc-path nyc.config.js npm test",
     "test-js": " npx ava ./dist/test/*Test.js",
     "test-watch": "ava -w",
     "test-debug": "node --inspect-brk node_modules/ava/cli.js --serial",
@@ -26,10 +27,12 @@
   "license": "MIT",
   "devDependencies": {
     "@types/antlr4": "^4.7.0",
+    "@istanbuljs/nyc-config-typescript": "^0.1.3",
     "@types/node": "^12.0.7",
     "@types/puppeteer": "^1.12.4",
     "ava": "^2.0.0",
     "http-server": "^0.11.1",
+    "coveralls": "^3.0.3",
     "parcel": "^1.12.3",
     "puppeteer": "^1.17.0",
     "tree-sitter-cli": "^0.15.3",
