tree-sitter-highlights-dot

--- a/tree-sitter-highlights-dot/.gitignore
+++ b/tree-sitter-highlights-dot/.gitignore
@@ -11,10 +11,8 @@ log2.txt
 /package
 .vscode
 test-browser-outdir
-tmp*
+tmp.?*
 .antlr
 grammar-graph
-universal-svg-rasterizer
-doc
-tree-sitter-highlights-dot
-.antlr
+render-dot
+/tmp*
