--- a/tree-sitter-grammar-to-dot/package.json
+++ b/tree-sitter-grammar-to-dot/package.json
@@ -12,9 +12,8 @@
     "test-watch": "ava -w",
     "prepare": "npm run build",
     "test-debug": "node --inspect-brk node_modules/ava/cli.js --serial",
-    "copy": "exit 0",
     "clean": "rm -rf dist docs test-browser-outdir",
-    "build": "npm run clean && npx tsc && npm run copy",
+    "build": "npm run clean && npx tsc ",
     "format": "npx ts-refactor format \"src/**/*.ts*\" \"test/**/*.ts*\" ./formatCodeSettings.json --tsConfigPath ./tsconfig.json --dontAsk",
     "organizeImports": "npx ts-refactor organizeImports \"src/**/*.ts*\" \"test/**/*.ts*\"  ./formatCodeSettings.json --tsConfigPath ./tsconfig.json  --dontAsk ",
     "lint": "npm run organizeImports && npm run format",
