--- a/univac/package.json
+++ b/univac/package.json
@@ -46,6 +46,7 @@
     "antlr4": "^4.7.2",
     "minimist": "^1.2.0",
     "misc-utils-of-mine-generic": "^0.2.8",
+    "tree-sitter-bash": "^0.13.9",
     "web-tree-sitter": "^0.15.6"
   },
   "keywords": [
