--- a/univac/package.json
+++ b/univac/package.json
@@ -26,28 +26,28 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "@types/antlr4": "^4.7.0",
     "@istanbuljs/nyc-config-typescript": "^0.1.3",
+    "@types/antlr4": "^4.7.0",
     "@types/node": "^12.0.7",
     "@types/puppeteer": "^1.12.4",
     "ava": "^2.0.0",
-    "http-server": "^0.11.1",
     "coveralls": "^3.0.3",
+    "http-server": "^0.11.1",
     "parcel": "^1.12.3",
     "puppeteer": "^1.17.0",
+    "tree-sitter-bash": "^0.13.9",
     "tree-sitter-cli": "^0.15.3",
-    "tree-sitter-javascript": "^0.15.0",
     "tree-sitter-rust": "^0.15.0",
+    "tree-sitter-scala": "^0.13.0",
     "ts-node": "^8.2.0",
     "ts-refactor": "0.0.6",
-    "typescript": "^3.5.1"
+    "typescript": "^3.5.1",
+    "web-tree-sitter": "^0.15.6"
   },
   "dependencies": {
     "antlr4": "^4.7.2",
     "minimist": "^1.2.0",
-    "misc-utils-of-mine-generic": "^0.2.8",
-    "tree-sitter-bash": "^0.13.9",
-    "web-tree-sitter": "^0.15.6"
+    "misc-utils-of-mine-generic": "^0.2.8"
   },
   "keywords": [
     "typescript",
