--- a/svg-png-converter/package.json
+++ b/svg-png-converter/package.json
@@ -62,7 +62,7 @@
     "email": "sebastigurin@gmail.com",
     "url": "http://sgurin.com"
   },
-  "homepage": "https://github.com/cancerberoSgx/univac/tree/master/svg-png-converter",
+  "homepage": "https://www.npmjs.com/package/svg-png-converter",
   "repository": {
     "type": "git",
     "url": "https://github.com/cancerberoSgx/univac.git"
