--- a/svg-png-converter/package.json
+++ b/svg-png-converter/package.json
@@ -36,11 +36,11 @@
     "typescript": "^3.5.1"
   },
   "dependencies": {
+    "bitmap2vector": "file:../bitmap2vector/bitmap2vector",
     "blob-to-buffer": "^1.2.8",
     "buffer": "^5.2.1",
     "fabric": "^3.1.0",
     "glob": "^7.1.4",
-    "imagetracerjs": "git+https://github.com/cancerberosgx/imagetracerjs.git",
     "js-base64": "^2.5.1",
     "minimist": "^1.2.0",
     "misc-utils-of-mine-generic": "^0.2.8",
