--- a/bitmap2vector-online-converter/package.json
+++ b/bitmap2vector-online-converter/package.json
@@ -13,7 +13,7 @@
     "start-sm": " npx parcel serve  src/index.html -d docs",
     "build-dev-no-maps": "export NODE_ENV=development ; parcel build src/index.html -d docs --no-minify --no-content-hash  --no-source-maps",
     "build-dev": "export NODE_ENV=development ; parcel build src/index.html -d docs --no-minify --no-source-maps --no-content-hash",
-    "build": "npm run clean && npx tsc && npm run build-only && rm -rf ../../../demos/docs/bitmap2vector-converter/* && rm -rf docs/static && mkdir -p docs/static && cp -r static/*  docs/static && mv docs/* ../../../demos/docs/bitmap2vector-converter/",
+    "build": "npm run clean && npx tsc && npm run build-only && rm -rf ../../../demos/docs/bitmap2vector-converter/* && rm -rf docs/static && mkdir -p docs/static && cp -r static/*  docs/static && mv docs/* ../../demos/docs/bitmap2vector-converter/",
     "build-only": "export NODE_ENV=production && node --max-old-space-size=5000 node_modules/parcel/bin/cli.js build src/index.html -d docs --no-content-hash --detailed-report --no-source-maps --public-url './'",
     "all": "npm run clean && npm run lint && npm run build"
   },
@@ -39,12 +39,14 @@
     "watch": "^1.0.2"
   },
   "dependencies": {
+    "@ajainarayanan/react-pan-zoom": "0.0.3",
     "file-saver": "^2.0.2",
     "file-type": "^11.1.0",
     "materialize-css": "^1.0.0-rc.2",
     "misc-utils-of-mine-generic": "^0.2.10",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-materialize": "^3.3.1",
     "svg-png-converter": "file:../svg-png-converter",
     "svgo": "github:cancerberoSgx/svgo#browser"
   },
