--- a/geometrizer-js/package.json
+++ b/geometrizer-js/package.json
@@ -11,12 +11,13 @@
   "scripts": {
     "test": "npm run build && ava",
     "test-browser": "exit 0; npx ava test-browser/*Test.ts",
-    "test-js": " npx ava ./dist/test/*Test.js",
+    "test-js": "npm run build && npx ava ./dist/test/*Test.js",
     "test-watch": "ava -w",
     "prepare": "npm run build",
     "test-debug": "node --inspect-brk node_modules/ava/cli.js --serial",
-    "clean": "rm -rf tmp* dist docs test-browser-outdir",
-    "build": "npm run clean && npx tsc",
+    "clean": "rm -rf tmp* dist",
+    "build": "npm run clean && npx tsc && npm run copy",
+    "copy": "cp src/geometrize.js dist/src",
     "format": "npx ts-refactor format \"src/**/*.ts*\" \"test/**/*.ts*\" ./formatCodeSettings.json --tsConfigPath ./tsconfig.json --dontAsk",
     "organizeImports": "npx ts-refactor organizeImports \"src/**/*.ts*\" \"test/**/*.ts*\" ./formatCodeSettings.json --tsConfigPath ./tsconfig.json --dontAsk ",
     "lint": "npm run organizeImports && npm run format",
@@ -25,13 +26,11 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "@types/node": "^12.0.8",
     "ava": "^2.1.0",
     "ts-node": "^8.3.0",
     "ts-refactor": "0.0.6",
     "typescript": "^3.5.2"
   },
-  "dependencies": {},
   "keywords": [
     "geometrizer",
     "JavaScript",
