--- a/bitmap2vector/bitmap2vector-cli/package.json
+++ b/bitmap2vector/bitmap2vector-cli/package.json
@@ -17,13 +17,16 @@
     "format": "npx ts-refactor format \"src/**/*.ts*\" \"test/**/*.ts*\" ./formatCodeSettings.json --tsConfigPath ./tsconfig.json --dontAsk",
     "organizeImports": "npx ts-refactor organizeImports \"src/**/*.ts*\" \"test/**/*.ts*\"  ./formatCodeSettings.json --tsConfigPath ./tsconfig.json  --dontAsk ",
     "lint": "npm run organizeImports && npm run format",
-    "all": "npm run clean && npm run lint && npm run build && npm run test && npm run test-js && npm run test-browser && npm run clean",
+    "docs-readme-toc": "npx markdown-toc README.md -i",
+    "docs": "npm run docs-readme-toc",
+    "all": "npm run clean && npm run lint && npm run build && npm run test && npm run test-js && npm run test-browser && npm run clean && npm run docs",
     "all-publish": "npm run all && git commit -a -m \"version patch\" && npm version patch && npm publish"
   },
   "devDependencies": {
     "@types/glob": "^7.1.1",
     "@types/node": "^12.0.8",
     "ava": "^2.1.0",
+    "markdown-toc": "^1.2.0",
     "ts-refactor": "0.0.6",
     "ts-node": "^8.3.0",
     "typescript": "^3.5.2"
