--- a/bitmap2vector/bitmap2vector/package.json
+++ b/bitmap2vector/bitmap2vector/package.json
@@ -16,20 +16,23 @@
     "format": "npx ts-refactor format \"src/**/*.ts*\" \"test/**/*.ts*\" ./formatCodeSettings.json --tsConfigPath ./tsconfig.json --dontAsk",
     "organizeImports": "npx ts-refactor organizeImports \"src/**/*.ts*\" \"test/**/*.ts*\"  ./formatCodeSettings.json --tsConfigPath ./tsconfig.json  --dontAsk ",
     "lint": "npm run organizeImports && npm run format",
-    "all": "npm run clean && npm run lint && npm run build && npm run test && npm run test-js && npm run test-browser",
+    "docs-readme-toc": "npx markdown-toc README.md -i",
+    "docs": "npm run docs-readme-toc",
+    "all": "npm run clean && npm run lint && npm run build && npm run test && npm run test-js && npm run test-browser && npm run docs",
     "all-publish": "npm run all && git commit -a -m \"version patch\" && npm version patch && npm publish"
   },
   "license": "unlicense",
   "devDependencies": {
     "@types/glob": "^7.1.1",
     "@types/node": "^12.0.8",
+    "@types/node-fetch": "^2.3.7",
     "ava": "^2.1.0",
     "ts-node": "^8.3.0",
+    "markdown-toc": "^1.2.0",
     "ts-refactor": "0.0.6",
     "typescript": "^3.5.2"
   },
   "dependencies": {
-    "@types/node-fetch": "^2.3.7",
     "imagetracerjs": "git+https://github.com/jankovicsandras/imagetracerjs.git",
     "jimp": "^0.6.4",
     "node-fetch": "^2.6.0"
