--- a/svg-png-converter/package.json
+++ b/svg-png-converter/package.json
@@ -20,16 +20,19 @@
     "format": "npx ts-refactor format \"src/**/*.ts*\" \"test/**/*.ts*\" ./formatCodeSettings.json --tsConfigPath ./tsconfig.json --dontAsk",
     "organizeImports": "npx ts-refactor organizeImports \"src/**/*.ts*\" \"test/**/*.ts*\" ./formatCodeSettings.json --tsConfigPath ./tsconfig.json --dontAsk ",
     "lint": "npm run organizeImports && npm run format",
-    "all": "npm run clean && npm run lint && npm run build && npm run test && npm run test-js && npm run test-browser",
+    "docs-readme-toc": "npx markdown-toc README.md -i",
+    "docs": "npm run docs-readme-toc",
+    "all": "npm run clean && npm run lint && npm run build && npm run test && npm run test-js && npm run test-browser && npm run docs",
     "all-publish": "npm run all && git commit -a -m \"version patch\" && npm version patch && npm publish"
   },
   "license": "MIT",
   "devDependencies": {
-    "@types/fabric": "^2.6.16",
+    "@types/fabric": "^2.6.17",
     "@types/glob": "^7.1.1",
     "@types/js-base64": "^2.3.1",
-    "@types/node": "^12.0.8",
+    "@types/node": "^12.0.10",
     "ava": "^2.1.0",
+    "markdown-toc": "^1.2.0",
     "babel-polyfill": "^6.26.0",
     "file-type": "^12.0.0",
     "primitive": "github:Easonzero/primitive",
@@ -38,10 +41,10 @@
     "typescript": "^3.5.2"
   },
   "dependencies": {
-    "bitmap2vector": "0.0.3",
+    "bitmap2vector": "0.0.4",
     "blob-to-buffer": "^1.2.8",
     "buffer": "^5.2.1",
-    "fabric": "^3.1.0",
+    "fabric": "^3.2.0",
     "glob": "^7.1.4",
     "js-base64": "^2.5.1",
     "minimist": "^1.2.0",
